fix(landing-page): remove footer only scrolling
Previously, the footer was having scrollbar if not enough space is available.
Now the entire landing-page will scroll.
This also solves clipped focus ring.

Closes #2151

--- a/projects/element-ng/landing-page/si-landing-page.component.scss
+++ b/projects/element-ng/landing-page/si-landing-page.component.scss
@@ -95,8 +95,6 @@ $margin-bottom-footer: map.get(all-variables.$spacers, 9);
 
 footer {
   color: all-variables.$element-text-secondary;
-  // Ensure we use the space in a surrounding container
-  overflow: auto;
 }
 
 // large tablet
